# my_gazebo

./: README.md  demo.md  filetree.txt  tree_structure.txt  workSchedule.md
devel/: .catkin  setup.fish
recordings_tmp/: demo_run_1_screen.mkv  tennis_pickup_demo_20260427_231357_left.mkv  tennis_pickup_demo_20260427_231357_right.mkv  tennis_pickup_screen_20260427_233423_screen.mkv  tennis_pickup_screen_20260428_004209_screen.mkv
recordings_tmp/exp_10_point2/: screen.mkv
recordings_tmp/exp_10_point_v2/: screen.mkv
recordings_tmp/exp_10_point_v3/: screen.mkv
recordings_tmp/exp_10_point_v4/: screen.mkv
recordings_tmp/exp_10_point_v5/: screen.mkv
recordings_tmp/exp_10_point_v6/: screen.mkv
recordings_tmp/exp_10_point_v7/: screen.mkv
recordings_tmp/exp_10_segment/: screen.mkv
recordings_tmp/exp_10_segment2/: screen.mkv
recordings_tmp/exp_10_segment3/: screen.mkv
recordings_tmp/exp_10_segment_v2/: screen.mkv
recordings_tmp/exp_10_segment_v3/: screen.mkv
recordings_tmp/exp_10_segment_v5/: screen.mkv
recordings_tmp/exp_10_segment_v6/: screen.mkv
recordings_tmp/exp_10_segment_v7/: screen.mkv
recordings_tmp/exp_15_segment/: screen.mkv
recordings_tmp/exp_15a_segment/: screen.mkv
recordings_tmp/exp_15b_segment/: screen.mkv
recordings_tmp/exp_30_segment_fix2/: screen.mkv
recordings_tmp/exp_turncmp5_point/: screen.mkv
recordings_tmp/exp_turncmp5_point_v2/: screen.mkv
recordings_tmp/exp_turncmp5_point_v3/: screen.mkv
src/my_simulation/: CMakeLists.txt  package.xml
src/my_simulation/config/: stereo_config.yaml
src/my_simulation/config/scenes/: demo_4.yaml  scene_10_sparse.yaml  scene_15_clustered_half.yaml  scene_15_clustered_half_a.yaml  scene_15_clustered_half_b.yaml  scene_15_clustered_half_c.yaml  scene_15_half_random.yaml  scene_30_clustered.yaml  scene_turn_compare.yaml  scene_turn_compare_5_random.yaml
src/my_simulation/models_and_worlds/: simple_car.urdf  spawn_car.launch  spawn_car_point.launch  spawn_car_point_10.launch  spawn_car_point_30_cluster.launch  spawn_car_segment.launch  spawn_car_segment_10.launch  spawn_car_segment_30_cluster.launch  tennis_court.world
src/my_simulation/scripts/: run_sim_with_cameras_and_record.sh  run_sim_with_views_and_screen_record.sh
src/my_simulation/src/: ball_pickup_controller.cpp  stereo_vision_localization.cpp
(+11 files in other folders)
